syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.admin;

import "DistLedgerCommonDefinitions.proto";

// Administrator Interface of the DistLedger Service

message ActivateRequest {}

message ActivateResponse {}

message DeactivateRequest {}

message DeactivateResponse {}

message GossipRequest {
  int32 replicaId = 1;
  repeated int32 replicaTS = 2;
  LedgerState ledgerState = 3;
}

message GossipResponse {}

message getLedgerStateRequest {}

message getLedgerStateResponse {
  LedgerState ledgerState = 1;
}

message GetInfoToPropagateRequest {
  // ReplicaID of the replica that is being sent the ledger
  int32 replicaId = 2;
}

message GetInfoToPropagateResponse {
  // Information of the requested replica.
  LedgerState ledgerState = 1;
  repeated int32 replicaTS = 2;
}

service AdminService {
  rpc activate(ActivateRequest) returns (ActivateResponse);
  rpc deactivate(DeactivateRequest) returns (DeactivateResponse);
  rpc gossip(GossipRequest) returns (GossipResponse);
  rpc getLedgerState(getLedgerStateRequest) returns (getLedgerStateResponse);
  rpc getLedgerToPropagate(GetInfoToPropagateRequest) returns (GetInfoToPropagateResponse);
}
