syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

message RegisterRequest {
  string serverServiceName = 1;
  string serverQualifier = 2;
  string serverAddress = 3;
}

message RegisterResponse {
  int32 serverID = 1;
}

message LookupRequest {
  string serverServiceName = 1;
  string serverQualifier = 2;
}

message LookupResponse {
  repeated string serverAddress = 1;
}

message DeleteRequest {
  string serverServiceName = 1;
  string serverAddress = 2;
  int32 serverID = 3;
}

message DeleteResponse {}

message GetServerIDRequest {
  string serverServiceName = 1;
  string serverAddress = 2;
}

message GetServerIDResponse {
  int32 serverID = 1;
}

message GetServerAddressRequest {
  string serverServiceName = 1;
  string serverQualifier = 2;
}

message GetServerAddressResponse {
  string serverAddress = 1;
}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
  rpc getServerID(GetServerIDRequest) returns (GetServerIDResponse);
  rpc getServerAddress(GetServerAddressRequest) returns (GetServerAddressResponse);
}
